packages/nft-server/k8s/services.yml
apiVersion: v1
kind: Service
metadata:
  name: balue
  namespace: staging
  labels:
    app: gateway
spec:
  ports:
    - port: 3333
      targetPort: 3333
  type: NodePort
  selector:
    app: balue
---
apiVersion: v1
kind: Service
metadata:
  name: balue-shimmer
  namespace: staging
  labels:
    app: gateway
spec:
  ports:
    - port: 3333
      targetPort: 3333
  type: NodePort
  selector:
    app: balue-shimmer
---
apiVersion: v1
kind: Service
metadata:
  name: balue
  namespace: production
  labels:
    app: gateway
spec:
  ports:
    - port: 3333
      targetPort: 3333
  type: NodePort
  selector:
    app: balue
